# haskell-book-exercise

./: README.md  wat.cabal
src/: Compose.hs  LearnParsers.hs  ReaderPractice.hs  Wat.hs
