name:                wat
version:             0.1.0.0
synopsis:            Exercise for the Haskell Book
description:         Exercise for the Haskell Book
homepage:            https://github.com/fxmy/haskell-book-exercise
license:             GPL-3
license-file:        LICENSE
author:              fxmy
maintainer:          fxmywc@gmail.com
copyright:           2017 fxmy
category:            Exercise
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Wat, ReaderPractice, LearnParsers, Compose
  build-depends:       base >= 4.7 && < 5, QuickCheck, time, semigroups, checkers, random, trifecta, parsers, transformers
  default-language:    Haskell2010

executable wat-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wat
  default-language:    Haskell2010

test-suite wat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fxmy/haskell-book-exercise

